# math-solver

./: .gitignore  Procfile  README.md  guide.md  nixpacks.toml  requirements.txt  run.bat  test.py  vercel.json
backend/: __init__.py  __main__.py  app.py  helpers.py  models.py  pyproject.toml  requirements.txt  test.bat  test_solver.py
backend/solver/: __init__.py  __main__.py  ast.py  exceptions.py  lexer.py  parser.py  parser_2.py  solve.py
backend/tests/: __init__.py  test_server.py  test_solver.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.js  App.jsx  index.css  index.js
frontend/src/components/: Footer.jsx  List.jsx  Main.jsx  NavBar.jsx  Output.jsx  functionsList.jsx
